--- a/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
+++ b/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LinkDev.IKEA.PL
 @using LinkDev.IKEA.PL.ViewModels
+@using LinkDev.IKEA.PL.ViewModels.Departments
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
