--- a/LinkDev.IKEA.PL/Views/Department/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Index.cshtml
@@ -3,7 +3,20 @@
     ViewData["Title"] = "Index";
 
 }
-
+@if(!string.IsNullOrEmpty(TempData["Message"] as string))
+{
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index :11">
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">IKEA</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                @TempData["Message"]
+            </div>
+        </div>
+  </div>
+}
 <h1>All Departments</h1>
 <br />
 <br />
