--- a/LinkDev.IKEA.PL/Views/Department/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Department/Index.cshtml
@@ -59,9 +59,28 @@
                             <i class="fa-solid fa-trash"></i>Delete
                         </a>
                     </td>
-
-
                 </tr>
+                <div class="modal fade" id="DeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title fs-1" id="exampleModalLabel">Delete Department</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are You Sure To Delete This Department?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <form asp-action="Delete" asp-route-id="@department.Id">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <input type="submit" value="Delete" class="btn btn-danger">
+                                </form>
+                             </div>
+                            </div>
+                        </div>
+                    </div>
+                <div/>
+            
             }
         </tbody>
     </table>
