--- a/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
+++ b/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LinkDev.IKEA.PL
 @using LinkDev.IKEA.PL.ViewModels
 @using LinkDev.IKEA.PL.ViewModels.Departments
+@using LinkDev.IKEA.PL.ViewModels.Employees
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
