--- a/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
+++ b/LinkDev.IKEA.PL/Views/_ViewImports.cshtml
@@ -2,4 +2,8 @@
 @using LinkDev.IKEA.PL.ViewModels
 @using LinkDev.IKEA.PL.ViewModels.Departments
 @using LinkDev.IKEA.PL.ViewModels.Employees
+@using LinkDev.IKEA.DAL.Common.Enums
+@using LinkDev.IKEA.BLL.Services.Departments
+@using LinkDev.IKEA.DAL.Entities.Departments
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
