--- a/LinkDev.IKEA.PL/Views/Employee/Index.cshtml
+++ b/LinkDev.IKEA.PL/Views/Employee/Index.cshtml
@@ -59,34 +59,51 @@
     </div>
 
     <div class="table-responsive">
+        <!--Still Not Work :( Check it later -->
         <table class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
                     <th>
-                        <a asp-action="Index" asp-route-sortBy="name">
+                        <a asp-action="Index" asp-route-sortBy="name" 
+                                              asp-route-searchTerm="@Model.SearchTerm"
+                                              asp-route-sortAscending="@(Model.SortedBy == "name" ? !Model.SortAscending : true)"
+                                              asp-route-page="@Model.Page"
+						                      asp-route-pageSize="@Model.PageSize"
+                        >
                             Full Name
-                          @*   @if (Model.SortBy == "name")
+                          @if (Model.SortedBy == "name")
                             {
                                 <i class="fas fa-sort-@(Model.SortAscending ? "up" : "down")"></i>
-                            } *@
+                            } 
                         </a>
                     </th>
                     <th>
-                        <a asp-action="Index" asp-route-sortBy="email" >
+                        <a asp-action="Index" 
+                           asp-route-sortBy="email"
+                           asp-route-searchTerm="@Model.SearchTerm"
+                           asp-route-sortAscending="@(Model.SortedBy == "email" ? !Model.SortAscending : true)"
+                           asp-route-page="@Model.Page"
+                           asp-route-pageSize="@Model.PageSize">
                             Email
-                          @*   @if (Model.SortBy == "email")
+                            @if (Model.SortedBy == "email")
                             {
                                 <i class="fas fa-sort-@(Model.SortAscending ? "up" : "down")"></i>
-                            } *@
+                            }
                         </a>
                     </th>
                     <th>
-                        <a asp-action="Index" asp-route-sortBy="department" >
+                        <a asp-action="Index"
+                           asp-route-sortBy="department"
+                           asp-route-searchTerm="@Model.SearchTerm"
+                           asp-route-sortAscending="@(Model.SortedBy == "department" ? !Model.SortAscending : true)"
+                           asp-route-page="@Model.Page"
+                           asp-route-pageSize="@Model.PageSize"
+                        >
                             Department
-                          @*   @if (Model.SortBy == "department")
+                            @if (Model.SortedBy == "department")
                             {
                                 <i class="fas fa-sort-@(Model.SortAscending ? "up" : "down")"></i>
-                            } *@
+                            }
                         </a>
                     </th>
                     <th>Status</th>
@@ -143,11 +160,17 @@
         <div>
             Showing @(((Model.Page - 1) * Model.PageSize) + 1) to @Math.Min(Model.Page * Model.PageSize, Model.TotalCount) of @Model.TotalCount employees
         </div>
+        
 
         <nav aria-label="Page navigation">
             <ul class="pagination">
                 <li class="page-item @prevDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.Page - 1)" asp-route-pageSize="@Model.PageSize" >
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.Page - 1)" asp-route-pageSize="@Model.PageSize"
+                       asp-route-sortBy="@Model.SortedBy"
+                       asp-route-searchTerm="@Model.SearchTerm"
+                       asp-route-sortAscending="@Model.SortAscending"
+                       asp-route-page="@Model.Page"
+                       asp-route-pageSize="@Model.PageSize">
                         Previous
                     </a>
                 </li>
@@ -155,14 +178,24 @@
                 @for (int i = Math.Max(1, Model.Page - 2); i<= Math.Min(totalPages, Model.Page + 2); i++)
                 {
                     <li class="page-item @(i == Model.Page ? " active " : " ")">
-                        <a class="page-link" asp-action="Index" asp-route-page="@i" asp-route-pageSize="@Model.PageSize">
+                        <a class="page-link" asp-action="Index" asp-route-page="@i" asp-route-pageSize="@Model.PageSize"
+                           asp-route-sortBy="@Model.SortedBy"
+                           asp-route-searchTerm="@Model.SearchTerm"
+                           asp-route-sortAscending="@Model.SortAscending"
+                           asp-route-page="@Model.Page"
+                           asp-route-pageSize="@Model.PageSize">
                             @i
                         </a>
                     </li>
                 }
 
                 <li class="page-item @nextDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.Page + 1)" asp-route-pageSize="@Model.PageSize" >
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.Page + 1)" asp-route-pageSize="@Model.PageSize"
+                       asp-route-sortBy="@Model.SortedBy"
+                       asp-route-searchTerm="@Model.SearchTerm"
+                       asp-route-sortAscending="@Model.SortAscending"
+                       asp-route-page="@Model.Page"
+                       asp-route-pageSize="@Model.PageSize">
                         Next
                     </a>
                 </li>
